[project]
name = "wifi-cracker"
version = "0.1.0"
description = "Educational WiFi password brute force demo"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]